# monster-workbench

./: .env.development  .env.production  .env.staging  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CHANGELOG.zh-CN.md  DEV_STANDARDS.md  Goalbal.md  HOT_UPDATE_CHECKLIST.md  LICENSE  README.md  RELEASE_TEST_GUIDE.md  Style.md  components.d.ts  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/sidecars/python/: ai_provider_actions.py  ai_provider_artifacts.py  ai_provider_input.py  ai_provider_results.py  ai_provider_tester.py  creative_health_server.py  provider_adapters.py  provider_anthropic_adapter.py  stress_ai_provider_tester.py  test_ai_provider_tester.py  test_creative_health_server.py
src-tauri/src/: main.rs
src-tauri/src/commands/: ai.rs  app.rs  auth.rs  config.rs  creative_batch.rs  creative_goal.rs  creative_project.rs  creative_sidecar.rs  creative_task.rs  database.rs  file.rs  image_workbench.rs  mod.rs  navigation.rs  system.rs  updater.rs  worker_queue.rs
src-tauri/src/infra/: ai_generation_repo.rs  ai_generation_repo_tests.rs  ai_generation_schema.rs  creative_asset_repo.rs  creative_batch_repo.rs  creative_db.rs  creative_db_schema.rs  creative_db_support.rs  creative_db_tests.rs  creative_goal_repo.rs  creative_model_run_repo.rs  creative_project_repo.rs  creative_task_repo.rs  creative_types.rs  crypto.rs  db.rs  db_nav.rs  fs.rs  http.rs  image_workbench_prompt.rs  image_workbench_query.rs  image_workbench_repo.rs  image_workbench_repo_assets.rs  image_workbench_repo_cleanup.rs  image_workbench_repo_groups.rs  image_workbench_repo_runtime.rs  (+11 more)
(+847 files in other folders)
