[package]
name = "monster-tools"
version = "0.0.3"
description = "Monster Tools desktop app"
authors = ["Monster Tools"]
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31.0", features = ["bundled"] }
